# video_processing

./: CMakeLists.txt  README.md
include/: comparators.h  fx.h  maskgen.h  sorter.h  util.h
src/: CMakeLists.txt  main.cpp  mask_gen.cpp  maskgen.cpp  sorter.cpp  video_parameters.cpp  videoparameters.cpp  videoparameters.h
