set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED On)
message("CMAKE_CXX23_STANDARD_COMPILE_OPTION = ${CMAKE_CXX23_STANDARD_COMPILE_OPTION}")
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( ../include )
if(${CMAKE_BUILD_TYPE} MATCHES Debug)
  add_compile_definitions("_DEBUG")
endif()
set(SOURCES video_parameters.cpp sorter.cpp maskgen.cpp main.cpp)
add_executable( main ${SOURCES} .. )
#set_property(TARGET main PROPERTY CXX_STANDARD 23)
target_link_libraries( main ${OpenCV_LIBS} )
